Refaktoriranje - dodani projekti za modele, public web api i db(+ db servisi za produkte i kategorije). Dodan servis (i sučelje) za storage.

--- a/ProductCatalogueApp/Views/Categories/Index.cshtml
+++ b/ProductCatalogueApp/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductCatalogueApp.Models.Category>
+﻿@model IEnumerable<ProductCatalogueModels.Category>
 @{
     ViewData["Title"] = "Categories";
 }
