--- a/ProductCatalogueApp/Views/Products/Index.cshtml
+++ b/ProductCatalogueApp/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaginatedList<ProductCatalogueApp.Models.Product>
+﻿@model ProductCatalogueModels.PaginatedList<ProductCatalogueModels.Product>
 @{
     ViewData["Title"] = "Products";
 }
