--- a/ProductCatalogueApp/Views/Products/Delete.cshtml
+++ b/ProductCatalogueApp/Views/Products/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductCatalogueApp.Models.Product
+﻿@model ProductCatalogueModels.Product
 
 @{
     ViewData["Title"] = "Delete";
@@ -30,9 +30,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Deaktiviraj">
+    <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Deaktiviraj" class="btn btn-default" /> |
         <a asp-action="Index">Natrag na popis</a>
     </form>
 </div>
