Servisi više ne vracaju EF modele.

--- a/ProductCatalogueApp/Views/Categories/Details.cshtml
+++ b/ProductCatalogueApp/Views/Categories/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductCatalogueModels.Category
+﻿@model ProductCatalogueAppDb.ViewModels.CategoryViewModel
 
 @{
     ViewData["Title"] = "Details";
