--- a/ProductCatalogueApp/Views/Categories/Index.cshtml
+++ b/ProductCatalogueApp/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductCatalogueModels.Category>
+﻿@model IEnumerable<ProductCatalogueAppDb.ViewModels.CategoryViewModel>
 @{
     ViewData["Title"] = "Categories";
 }
