--- a/ProductCatalogueApp/Views/Products/Delete.cshtml
+++ b/ProductCatalogueApp/Views/Products/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductCatalogueModels.Product
+﻿@model ProductCatalogueAppDb.ViewModels.ProductViewModel
 
 @{
     ViewData["Title"] = "Delete";
