--- a/ProductCatalogueApp/Views/Products/Edit.cshtml
+++ b/ProductCatalogueApp/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model  ProductCatalogueApp.Models.ProductViewModels.ProductCategoriesViewModel
+﻿@model  ProductCatalogueAppDb.ViewModels.ProductCategoriesViewModel
 @{
     ViewData["Title"] = "Edit";
 }
